Turkyeh work fix dark mode

--- a/style/home.css
+++ b/style/home.css
@@ -82,12 +82,12 @@ body {
 }
 
 .input-group input {
-    width: 100%;
+    width: 95%;
     padding: 1rem 3rem;
     font-size: 1rem;
     background-color:#ffffff;;
     border-radius: .5rem;
-    border: 0.125rem solid hsl(332, 100%, 81%);
+    border: 0.1rem solid hsl(332, 100%, 50%);
     outline: none;
     margin-right:1rem ;
 }
@@ -366,24 +366,7 @@ body {
     font: normal 500 1.5rem/1.3 arial;
     background: white;
 
-    *{
-        box-sizing: border-box;
-
-        &:active,
-        &:hover {
-            box-sizing: border-box;
-        }
-
-        &::before,
-        &::after {
-            box-sizing: border-box;
-        }
-
-        &::selection {
-            color: #ecf0f1;
-            background: #34495e;
-        }
-    }
+    
 }
 
 ul {
@@ -533,6 +516,19 @@ li:last-child {
     color: var(--gray-2);
 }
 .index ion-icon {
-    right: 1rem;
+    right: 2rem;
     cursor: pointer;
+}
+:host {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    left: 85%;
+    contain: strict;
+    fill: currentcolor;
+    box-sizing: content-box !important;
+}
+.bxs-user:before ,.bxs-lock-alt:before ,.bx-mail-send:before  {
+    /* background-color: red; */
+    color: hsl(332, 91%, 46%);
 }
